This resolves a lot of test errors.
Let's see how CI does!

Soooooo much cleanup left to do.